...
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />

     <TextView
         android:id="@+id/no_results_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_results_search"
         android:textAppearance="?attr/textAppearanceCaption"
         android:textSize="18sp"
         android:visibility="gone"
...
